--- a/Lab 4/Lab 4.vcxproj.filters
+++ b/Lab 4/Lab 4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lab 4.cpp">
+    <ClCompile Include="Lab_4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
